Theater Alignment bug fix

--- a/src/Components/StaffSide/Theater/Theater.scss
+++ b/src/Components/StaffSide/Theater/Theater.scss
@@ -7,7 +7,7 @@ $padding: 1rem;
 $input-width: 90%;
 $box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
-.container {
+.TheaterCompcontainer {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,7 +15,7 @@ $box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   background-color: $background-color;
 }
 
-.form {
+.TheaterCompform {
   background: white;
   padding: $padding;
   border-radius: $border-radius;
